# RL_SYCL

./: CMakeLists.txt  README.md  env.sh
dl_code/: README.md  embedded_python_in_cpp.cpp  policy.py  policy1.py  test.py
figure/: demo_task_graph.pages  demo_task_graph.ps
input_generator/: generator_big.py  generator_small.py
inputs/: 1.in  20000.in  20000_big.in  20000_small.in  250.in  250_big.in  250_small.in  26.in  README.md  ac97_ctrl_big_matrix.in  ac97_ctrl_small_matrix.in  aes_core_big_matrix.in  aes_core_small_matrix.in  c1355_big_matrix.in  c1355_small_matrix.in  c17_big_matrix.in  c17_slack_big_matrix.in  c17_slack_small_matrix.in  c17_small_matrix.in  c1908_big_matrix.in  c1908_small_matrix.in  c2670_big_matrix.in  c2670_small_matrix.in  c3540_big_matrix.in  c3540_small_matrix.in  c3_path_big_matrix.in  c3_path_small_matrix.in  c3_slack_big_matrix.in  c3_slack_small_matrix.in  c432_big_matrix.in  c432_small_matrix.in  c499_big_matrix.in  c499_small_matrix.in  c5315_big_matrix.in  c5315_small_matrix.in  c6288_big_matrix.in  c6288_small_matrix.in  c7552_big_matrix.in  c7552_slack_big_matrix.in  c7552_slack_small_matrix.in  (+33 more)
inputs/testing/: ac97_ctrl_small_matrix_testing_1.in  ac97_ctrl_small_matrix_testing_2.in  ac97_ctrl_small_matrix_testing_3.in  ac97_ctrl_small_matrix_testing_4.in  ac97_ctrl_small_matrix_testing_5.in  ac97_ctrl_small_matrix_testing_6.in  aes_core_big_matrix_testing_1.in  aes_core_big_matrix_testing_2.in  (+28 more)
python_visualization/: visualization.py
src/: gpu_info.cpp  gpu_info.hpp  main.cpp  policy.hpp  tgs.hpp  threadpool.hpp
(+6 files in other folders)
